sample-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-env
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
