sample-hostpath.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-hostpath
spec:
  containers:
    - image: nginx:1.12
      name: nginx-container
      volumeMounts:
        - mountPath: /srv
          name: hostpath-sample
  volumes:
    - name: hostpath-sample
      hostPath:
        path: /etc
        type: DirectoryOrCreate
