sample-projected.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-projected
spec:
  containers:
    - image: nginx:1.12
      name: nginx-container
      volumeMounts:
        - mountPath: /srv
          name: projected-volume
  volumes:
    - name: projected-volume
      projected:
        sources:
          - secret:
              name: sample-db-auth
              items:
                - key: username
                  path: secret/username.txt
          - configMap:
              name: sample-configmap
              items:
                - key: nginx.conf
                  path: configmap/nginx.conf
          - downwardAPI:
              items:
                - path: "podname"
                  fieldRef:
                    fieldPath: metadata.name
