sample-externalip.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-externalip
spec:
  type: ClusterIP
  externalIPs:
    # Docker DesktopだとNodeにIPが割り当てられていないようなのでexternalIPは指定できず動かない
    - 192.168.65.3
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: sample-app
